src/objects/PANG_BPFormulas__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Formula Table for BP Estimates</description>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PANG_BPFormulas</label>
</CustomObject>